# project_chatbot

./: Dockerfile  README.md  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt
src/chatbot/core/: chatbot_service.py
src/chatbot/io/: db_connection.py  db_declaration.py
src/chatbot/jobs/rest_api/: client.py  run.py
