[tool.poetry]
name = "project_chatbot"
version = "0.1.0"
description = "A sample Python service of chatbot"
authors = ["Yaxiong Yuan <yyx1364@gmail.com>"]
readme = "README.md"
packages = [{ include = "chatbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
asyncpg = "*"
sqlalchemy = "*"
greenlet = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"